# AgentHub

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  openai_planner_hard.py  openai_planner_hard_event_helpers.py  openai_planner_hard_logging_helpers.py  openai_planner_hard_plan_helpers.py  openai_planner_hard_prompt_helpers.py  openai_planner_hard_pure_helpers.py  openai_planner_hard_response_helpers.py  openai_planner_hard_synthesis_helpers.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_comparison.sh
.github/: CODEOWNERS
cli/: .gitignore  __init__.py  __main__.py  app_server.py  requirements.txt
config/: browser_automation.toml  github_phase1.toml  provider_catalog.toml  web_tools.toml
document_tools/: __init__.py  document_ingest.py  document_ingest_file_helpers.py  document_ingest_parser_helpers.py  document_ingest_render_helpers.py  internal_policy_tools.py  office_tools.py  web_search_tools.py
gui/: .npmrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.smoke.config.ts
plugins/: __init__.py
scripts/: build_gui_desktop_bundle.py  build_gui_desktop_bundle.sh  check_governance_doc_links.py  check_governance_workflow_coverage.py  check_owners_coverage.py  check_taskboard_status.py  ci_check.sh  clean_install_smoke_linux.sh  collect_gui_acceptance_reports.py  deploy_gui_static.sh  format.sh  install_agenthub_cli.sh  publish_gui_desktop_release.py  publish_gui_desktop_release.sh  publish_gui_desktop_release_core.py  (+14 more)
(+2658 files in other folders)
