[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenthub"
version = "0.0.0"
description = "AgentHub governance and tooling baseline configuration"
requires-python = ">=3.13,<3.14"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
exclude = "^(build|dist|artifacts|cli/artifacts)/"
